BusOne/src/objects/Account_Unique__c.object
<CustomObject>
    <description>To store the Master Accounts Data</description>
    <fields>
        <fullName>BOT_Account_Type__c</fullName>
        <description>To store the type of the Account like Commercial or Medicare.</description>
        <label>Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>To store the BOT Entity ID</description>
        <externalId>true</externalId>
        <label>BOT_Entity_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_Level__c</fullName>
        <description>To store the Entity Level</description>
        <label>Entity Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_State__c</fullName>
        <description>It store the Associated state of an Entity</description>
        <label>Entity State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a self-lookup relationship. Parent Account ID will be populated here.</description>
        <label>Parent Account</label>
        <referenceTo>Account_Unique__c</referenceTo>
        <relationshipLabel>Primary Parent</relationshipLabel>
        <relationshipName>Parent_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Accounts Unique</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BOT_Account_Type__c</columns>
        <columns>BOT_Entity_Level__c</columns>
        <columns>BOT_Entity_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Commercial</fullName>
        <columns>NAME</columns>
        <columns>BOT_Account_Type__c</columns>
        <columns>BOT_Entity_Level__c</columns>
        <columns>BOT_Entity_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BOT_Account_Type__c</field>
            <operation>equals</operation>
            <value>Commercial</value>
        </filters>
        <label>Commercial</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Employer</fullName>
        <columns>NAME</columns>
        <columns>BOT_Account_Type__c</columns>
        <columns>BOT_Entity_Level__c</columns>
        <columns>BOT_Entity_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BOT_Account_Type__c</field>
            <operation>equals</operation>
            <value>Employer</value>
        </filters>
        <label>Employer</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Medicare</fullName>
        <columns>NAME</columns>
        <columns>BOT_Account_Type__c</columns>
        <columns>BOT_Entity_Level__c</columns>
        <columns>BOT_Entity_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BOT_Account_Type__c</field>
            <operation>equals</operation>
            <value>Medicare</value>
        </filters>
        <label>Medicare</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PBM</fullName>
        <columns>NAME</columns>
        <columns>BOT_Account_Type__c</columns>
        <columns>BOT_Entity_Level__c</columns>
        <columns>BOT_Entity_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BOT_Account_Type__c</field>
            <operation>equals</operation>
            <value>PBM</value>
        </filters>
        <label>PBM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Specialty_Provider</fullName>
        <columns>NAME</columns>
        <columns>BOT_Account_Type__c</columns>
        <columns>BOT_Entity_Level__c</columns>
        <columns>BOT_Entity_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BOT_Account_Type__c</field>
            <operation>equals</operation>
            <value>Specialty Provider</value>
        </filters>
        <label>Specialty Provider</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>State_Medicaid</fullName>
        <columns>NAME</columns>
        <columns>BOT_Account_Type__c</columns>
        <columns>BOT_Entity_Level__c</columns>
        <columns>BOT_Entity_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BOT_Account_Type__c</field>
            <operation>equals</operation>
            <value>State Medicaid</value>
        </filters>
        <label>State Medicaid</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TriCare</fullName>
        <columns>NAME</columns>
        <columns>BOT_Account_Type__c</columns>
        <columns>BOT_Entity_Level__c</columns>
        <columns>BOT_Entity_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BOT_Account_Type__c</field>
            <operation>equals</operation>
            <value>TriCare</value>
        </filters>
        <label>TriCare</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Unique</pluralLabel>
    <recordTypes>
        <fullName>Commercial</fullName>
        <active>true</active>
        <description>Used to assign the commercial page layout.</description>
        <label>Commercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employer</fullName>
        <active>true</active>
        <description>Used to assign the Employer page layout.</description>
        <label>Employer</label>
    </recordTypes>
    <recordTypes>
        <fullName>State_Medicaid</fullName>
        <active>true</active>
        <description>Used to assign the state medicaid page layout.</description>
        <label>State Medicaid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tricare</fullName>
        <active>true</active>
        <description>Used to assign the tricare page layout.</description>
        <label>Tricare</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>